2014-06-11  Michael Wright <wrigh517@msu.edu>

    * scripts/load-into-counting: Fixed docstring misnomer to 
    load-into-counting.py

2014-06-10  Michael Wright <wrigh517@msu.edu>

    * scripts/extract-long-sequences: Moved from sandbox, added argparse and 
    FASTQ support.
    * scripts/fastq-to-fasta: Fixed outdated argparse oversight.
    * tests/test_scripts.py: Added tests for extract-long-sequences.py

2014-06-04  Michael R. Crusoe <mcrusoe@msu.edu>

    * lib/Makefile: do a distclean as the CFLAGS may have changed. Fixes #442

2014-06-08  Titus Brown  <t@idyll.org>

    * doc/conf.py: set google_analytics_id and disqus_shortname properly;
	disable "editme" popup.
    * doc/_templates/page.html: take google_analytics_id and disqus_shortname
	from doc/conf.py.

2014-06-03 Chuck Pepe-Ranney <chuck.peperanney@gmail.com>

    * scripts/abundance-dist.py: removed call to check_space on infiles.  

2014-05-30  Titus Brown  <t@idyll.org>

    * khmer/_khmermodule.cc: remove merge2* functions: unused, untested.
    * lib/counting.cc, lib/hashbits.cc, lib/hashtable.cc: made file loading
	exceptions more verbose and informative.
    * tests/test_subset_graph.py: added tests for SubsetPartition::
	load_partitionmap.
    * khmer/_khmermodule.cc, lib/subset.cc, wrapped SubsetPartition::
	load_partitionmap to catch, propagate exceptions
    * tests/test_hashbits.py, tests/test_counting_hash.py: added tests
	for fail-on-load of bad file format versions; print exception messages.
    * .gitignore: added various temporary pip & build files
    * lib/counting.cc: added I/O exception handling to CountingHashFileReader
	and CountingHashGzFileReader.
    * lib/hashbits.cc: added I/O exception handling to Hashbits::load.
    * lib/subset.cc: added I/O exception handling to merge_from_disk.
    * lib/hashtable.cc: added I/O exception handling to load_tagset and
	load_stop_tags
    * khmer/_khmermodule.cc: added I/O exception propagation from C++ to